~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 0.9.2 version

* The postgresql-check-db-dir is now more strict to admin's configuration
  and tries to avoid future incompatibilities by warning about the
  /etc/systemd/system/postgresql@instance.service.d/ non-existence.
  Idea by Honza Horák.

* The /etc/postgresql/* path is not used for configuration as it does not
  conform systemd's intentions, see the thread:
  http://www.spinics.net/lists/fedora-devel/msg200450.html .  We encourage
  users to configure via postgresql.service.d/ drop-in directory.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 0.9.1 version

* The postgresql-setup script does not require --port option when upgrading.

* Each service produces its own upgrade/initdb log files under postgres'
  home directory.

* The README.rpm-dist file now follows the changes in 0.9 and 0.9.1.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 0.9 version

* This is inital version actually, changes are against F21 version:
  http://pkgs.fedoraproject.org/cgit/postgresql.git/tree/?id=49f074f1918a61

* Prepared for /etc/sysconfig/postgresql configuration, taking into account
  that we should make the s/postgresql.service/postgresql@.service/
  (instantiable) change.

* Allow user to specify PGPORT also by 'port' option in postgresql.conf

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~